# CryptoCortext

./: .gitignore  Makefile  cryptocortex_compile.sh  cryptocortex_run.sh  helib_compile.sh  helx_compile.sh  readme.md
CryptoCortex/include/: batch-dataset.h  config.h  element-dataset.h  encrypted-dataset.h  he-ops.h  layer-act.h  layer-avg.h  layer-batch.h  layer-conv.h  layer-dense.h  layer-flatter.h  layer.h  load-data.h  neu-net.h  normal-dataset.h  operations.h  plain-dataset.h
CryptoCortex/src/: batch-dataset.cpp  encrypted-dataset.cpp  he-ops.cpp  layer-act.cpp  layer-avg.cpp  layer-batch.cpp  layer-conv.cpp  layer-dense.cpp  layer-flatter.cpp  load-data.cpp  neu-net.cpp  normal-dataset.cpp  operations.cpp  plain-dataset.cpp
tools/: keras_to_weight.ipynb
work/: CMakeLists.txt
work/models/: CMakeLists.txt  relu_nn.cpp  relu_nn_2.cpp  softplus_bcnn.cpp  softplus_bcnn_5.cpp  softplus_cnn.cpp  softplus_cnn_10.cpp  softplus_cnn_7.cpp
